--- a/docs/styles.css
+++ b/docs/styles.css
@@ -14,12 +14,6 @@ body {
   max-width: 40rem;
 }
 
-header {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: baseline;
-}
-
 header h1 {
   margin: 0 0 0 -0.25rem;
   font-size: 5rem;
@@ -28,10 +22,6 @@ header h1 {
 
 header h1 a {
   color: #808;
-}
-
-header p {
-  margin: 0 0.75em;
 }
 
 nav ul {
@@ -57,12 +47,13 @@ a:focus, a:hover, a:active {
   body {
     max-width: 56rem; /* 15 + 1 + 40 */
     display: grid;
+    grid-template-rows: auto minmax(0, 1fr);
     grid-template-columns: 15rem auto;
     grid-gap: 1rem;
   }
 
   header {
-    grid-column: 1 / 3;
+    grid-column: 1;
     grid-row: 1;
   }
 
@@ -73,10 +64,6 @@ a:focus, a:hover, a:active {
 
   main {
     grid-column: 2;
-    grid-row: 2;
-  }
-
-  main h2:first-child {
-    margin-top: .5rem;
+    grid-row: 1 / 3;
   }
 }
