--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,7 +20,7 @@ header h1 {
   line-height: 0.75;
 }
 
-header h1 a {
+header h1 a:link, header h1 a:visited {
   color: #808;
 }
 
@@ -32,11 +32,15 @@ nav ul {
 pre {
   padding: 1rem;
   font: 15px Consolas, monospace;
-  background: #eee;
+  background: #fef;
 }
 
 a:link {
   text-decoration: none;
+}
+
+a:link, a:visited {
+  color: #a0a;
 }
 
 a:focus, a:hover, a:active {
