--- a/docs/styles.css
+++ b/docs/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 header h1 {
-  margin: 0 0 0 -0.25rem;
+  margin: 0 0 1rem -0.25rem;
   font-size: 5rem;
   line-height: 0.75;
 }
@@ -27,6 +27,10 @@ header h1 a:link, header h1 a:visited {
 nav ul {
   padding: 0;
   list-style: none;
+}
+
+footer {
+  font-size: 0.75rem;
 }
 
 pre {
@@ -52,9 +56,9 @@ a:focus, a:hover, a:active {
   body {
     max-width: 56rem; /* 15 + 1 + 40 */
     display: grid;
-    grid-template-rows: auto minmax(0, 1fr);
+    grid-template-rows: auto auto minmax(0, 1fr);
     grid-template-columns: 15rem auto;
-    grid-gap: 1rem;
+    grid-gap: 0 1rem;
   }
 
   header {
@@ -69,6 +73,11 @@ a:focus, a:hover, a:active {
 
   main {
     grid-column: 2;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
+  }
+
+  footer {
+    grid-column: 1;
+    grid-row: 3;
   }
 }
